[package]
name = "orgu"
version = "0.1.4"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
aws_lambda_events = "0.15"
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
aws-sdk-cloudwatchevents = "1.49.0"
aws-sdk-ssm = "1.54"
axum = "0.7.7"
base64 = "0.22"
chrono = "0.4.19"
clap = { version = "4.5.20", features = ["derive", "env"] }
clap-verbosity-flag = "2.2.2"
git2 = "0.19"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.1.0"
humantime = "2.1.0"
indoc = "2"
jsonwebtoken = "9.3.0"
lambda_http = "0.13"
lambda_runtime = "0.13"
octorust = "0.7.0"
pem = "3.0.3"
reqwest = { version = "< 0.12", features = ["json"] } # 1.12 has breacking changes with middleware creates.
reqwest-middleware = "< 0.3"
reqwest-retry = "= 0.4"
retry-policies = "= 0.3"
serde = "1.0.215"
serde_json = "1.0.132"
sha2 = "0.10.8"
strum = { version = "0.26", features = ["derive"] }
subtle = "2.6.1"
tempfile = "3.14.0"
thiserror = "2.0.3"
tokio = { version = "1", features = ["macros", "process"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["sensitive-headers", "timeout", "trace", "sensitive-headers", "util", "set-header", "request-id", "normalize-path"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter", "chrono"] }
url = "2.5.3"
uuid = "1.11.0"

[dev-dependencies]
pretty_assertions = "1.4"
mockall = "0.13.0"
axum-test = "16.3.0"

[lints.clippy]
# Enable some restriction lints.
absolute_paths = "warn"
as_conversions = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
else_if_without_else = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
exit = "warn"
expect_used = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
indexing_slicing = "warn"
inline_asm_x86_att_syntax = "warn"
inline_asm_x86_intel_syntax = "warn"
integer_division = "warn"
large_include_file = "warn"
let_underscore_must_use = "warn"
let_underscore_untyped = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
mixed_read_write_in_expression = "warn"
mod_module_files = "warn"
modulo_arithmetic = "warn"
multiple_inherent_impl = "warn"
mutex_atomic = "warn"
needless_raw_strings = "warn"
panic = "warn"
partial_pub_fields = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
semicolon_inside_block = "warn"
single_char_lifetime_names = "warn"
str_to_string = "warn"
string_add = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
string_to_string = "warn"
suspicious_xor_used_as_pow = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_debug = "warn"
verbose_file_reads = "warn"
wildcard_enum_match_arm = "warn"

# Enable all nursery lints.
nursery = { level = "warn", priority = -1 }
future_not_send = "allow"
